overflow fixed

--- a/article_1.css
+++ b/article_1.css
@@ -81,6 +81,7 @@ h2 h3{
   font-family: 'Open Sans', sans-serif;
   text-indent: 4em;
   padding:10px 25px 10px 25px;
+  
 }
 
 .row:after {
@@ -106,7 +107,6 @@ h2 h3{
   border-radius: 4px;
   border: solid 1px #364652;
   padding-bottom: 30px;
- 
 }
 .card{
   padding: 20px;
@@ -115,12 +115,33 @@ h2 h3{
   border-radius: 4px;
   border: solid 1px #364652;
 } 
-.summary {
-  float:right;
-  width: 25%;
-  padding: 10px 20px 10px 5px;
+#list{
+  min-width: 70px;
+  overflow: hidden;
+}
+header{
+  min-height:fit-content
+  
+}
+header p{
+  float:right
+  padding: 10px 150px 10px 5px;
   font-family:'Bodoni Moda', serif;
   text-indent: 3em;
+  padding: 20px;
+  background-color: #B5BEC6;
+  margin-top: 20px;
+  border-radius: 4px;
+  min-height: 300px;
+  
+}
+header img{
+  float: left ;
+  padding: 20px;
+  background-color: #B5BEC6;
+  margin-top: 20px;
+  border-radius: 4px;
+  border:hidden !important;
 }
 img{
   width: 70%;
